--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -713,14 +713,14 @@
 
 
 <div style="position: absolute; vertical-align: top; text-align: center; top: 55px; left: -9px; width: 192px; height: 32px;">
-<img src="https://i.postimg.cc/BndD0GQr/bubbleguylistenmusic2.gif" width="100" height="100" title="Radio_Amore_e_Vita93">
+<img src="https://i.postimg.cc/BndD0GQr/bubbleguylistenmusic2.gif" width="100" height="100" title="RadioCalabria27">
 <style type="text/css">
 
 
 </style>
 </div>
 <div style="position: absolute; vertical-align: top; text-align: center; top: 57px; left: 595px; width: 102px; height: 70px;">
-<img src="https://i.postimg.cc/BndD0GQr/bubbleguylistenmusic2.gif" width="100" height="100" title="Radio_Amore_e_Vita93">
+<img src="https://i.postimg.cc/BndD0GQr/bubbleguylistenmusic2.gif" width="100" height="100" title="RadioCalabria27">
 </div>
 
     <script type="text/javascript">/*! jQuery v3.0.0 | (c) jQuery Foundation | jquery.org/license */
