--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -10,7 +10,7 @@
 
 .garfieldpt {
 
-  background: url(https://i.postimg.cc/V6SB6V1t/sasaswwww.png);            /*Fondo Player*/
+  background: url(https://i.postimg.cc/vZGKjHjX/qqqqww2w2.png);            /*Fondo Player*/
   background-repeat: no-repeat;
   background-position: 0px center;
   position: relative;S
