--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -10,7 +10,7 @@
 
 .garfieldpt {
 
-  background: url(https://i.postimg.cc/mZzKFgK6/swsqwsqwsdqwdwedede.png);            /*Fondo Player*/
+  background: url(https://i.postimg.cc/44SZNK7F/swswsws.png);            /*Fondo Player*/
   background-repeat: no-repeat;
   background-position: 0px center;
   position: relative;S
@@ -696,7 +696,7 @@
          <div id="animation1">   
 
   </div>
- <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stream3.mexiserver.com/proxy/demo/RadioCalabria27" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
+ <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stream-51.zeno.fm/r950k185hwzuv?zs=RK6xvYURQ0SZpotbBY0OXQ" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
 </div>
 
 
