--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -696,7 +696,7 @@
          <div id="animation1">   
 
   </div>
- <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stream-51.zeno.fm/r950k185hwzuv?zs=RK6xvYURQ0SZpotbBY0OXQ" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
+ <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stream-062.zeno.fm/xb6id7dab91uv?zs=3Wjvs2EySNiostffgZD03w" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
 </div>
 
 
