--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -1,3 +1,4 @@
+
 </script>
 <!-- RadioCalabria27 -->
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -10,7 +11,7 @@
 
 .garfieldpt {
 
-  background: url(https://i.postimg.cc/mZzKFgK6/swsqwsqwsdqwdwedede.png);            /*Fondo Player*/
+  background: url(https://i.postimg.cc/0yZzXMLZ/Calabria-Nuovo.png);            /*Fondo Player*/
   background-repeat: no-repeat;
   background-position: 0px center;
   position: relative;S
@@ -696,7 +697,7 @@
          <div id="animation1">   
 
   </div>
- <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stream-062.zeno.fm/xb6id7dab91uv?zs=zkI7AW-aQkGwxtrfRe4BoQ/stream?icy=http" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
+ <!--part1//--><embed width="100%" height="100" src="https://radioplayer.link/stream/?autoplay=true&amp;name=RadioCalabria27&amp;bgcolor=090946&amp;textcolor=1332af&amp;v=fake&amp;stream=https://stm1.painelvox.xyz:7000/stream" "="" frameborder="0" scrolling="no" allow="autoplay;"> 
 </div>
 
 
@@ -741,7 +742,7 @@ return j.call(r(a),c)})),b))for(;i>h;h++)b(a[h],c,g?d:d.call(a[h],h,b(a[h],c)));
 			mount_point: "", //For Icecast server
 			type: "/;type=mp3",
             streampath: "/stream?icy=http",
-			cors: "",
+			cors: "/player-topo-html5/7000/musica/",
             logo: "https://i.postimg.cc/V6SB6V1t/sasaswwww.png",
 			servertitle: "RadioCalabria27", //For Shoutcast v2 server
             show_listeners: true,    
