--- a/RadioCalabria27.html
+++ b/RadioCalabria27.html
@@ -10,7 +10,7 @@
 
 .garfieldpt {
 
-  background: url(https://xatimg.com/image/KaobPUyHizEC.png);            /*Fondo Player*/
+  background: url(https://i.postimg.cc/jjmdrvR0/giuuuhiuh.png);            /*Fondo Player*/
   background-repeat: no-repeat;
   background-position: 0px center;
   position: relative;S
